cabal-version: >=1.10
name: paracletus
version: 0.0.0.1
license: BSD3
license-file: LICENSE
maintainer: vincecoghlan@gmail.com
author: Vince Coghlan
category: Game
build-type: Simple

flag dev
    default: True

executable paracletus
    main-is: Main.hs
    hs-source-dirs: src
    other-modules: UPrelude
                   Anamnesis
                   Anamnesis.Data
                   Anamnesis.Event
                   Anamnesis.Foreign
                   Anamnesis.Init
                   Anamnesis.Util
                   Artos
                   Artos.Data
                   Artos.Except
                   Artos.Queue
                   Artos.Var
                   Epiklesis
                   Epiklesis.Command
                   Epiklesis.Data
                   Paracletus
                   Paracletus.Data
                   Paracletus.Load
                   Paracletus.TH
                   Paracletus.Vulkan
                   Paracletus.Vulkan.Atlas
                   Paracletus.Vulkan.Buffer
                   Paracletus.Vulkan.Calc
                   Paracletus.Vulkan.Command
                   Paracletus.Vulkan.Data
                   Paracletus.Vulkan.Desc
                   Paracletus.Vulkan.Device
                   Paracletus.Vulkan.Draw
                   Paracletus.Vulkan.Foreign
                   Paracletus.Vulkan.Instance
                   Paracletus.Vulkan.Load
                   Paracletus.Vulkan.Pipeline
                   Paracletus.Vulkan.Pres
                   Paracletus.Vulkan.Shader
                   Paracletus.Vulkan.Sync
                   Paracletus.Vulkan.Texture
                   Paracletus.Vulkan.Trans
                   Paracletus.Vulkan.Vertex
                   Paracletus.Oblatum
                   Paracletus.Oblatum.Callback
                   Paracletus.Oblatum.Font
                   Paracletus.Oblatum.GLFW
    default-language: Haskell2010
    ghc-options: -O2 -fexcess-precision -threaded -eventlog -rtsopts -feager-blackholing
    build-depends: base
                 , base-unicode-symbols
                 , filepath
                 , directory
                 , stm
                 , mtl
                 , monad-logger
                 , time
                 , vulkan-api >= 1.3
                 , easytensor
                 , easytensor-vulkan
                 , JuicyPixels
                 , freetype2
                 , containers
                 , dimensions
                 , process
                 , hslua
                 , GLFW-b
                 , vector
                 , bytestring
                 , split
                 , template-haskell
    default-extensions: DataKinds
                        ExplicitForAll
                        FlexibleInstances
                        LambdaCase
                        MagicHash
                        MultiWayIf
                        NamedFieldPuns
                        NegativeLiterals
                        RecordWildCards
                        TypeSynonymInstances
                        UnicodeSyntax
    other-extensions:   AllowAmbiguousTypes
                        BangPatterns
                        ConstraintKinds
                        CPP
                        DeriveGeneric
                        ExistentialQuantification
                        FlexibleContexts
                        GADTs
                        InstanceSigs
                        KindSignatures
                        LiberalTypeSynonyms
                        MonoLocalBinds
                        MultiParamTypeClasses
                        PatternSynonyms
                        PolyKinds
                        RankNTypes
                        ScopedTypeVariables
                        StandaloneDeriving
                        Strict
                        StrictData
                        TemplateHaskell
                        TypeApplications
                        TypeOperators
                        UnboxedTuples
                        UndecidableInstances
                        ViewPatterns
    if flag (dev)
        cpp-options: -DDEVELOPMENT
        ghc-options: -O0 -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -threaded -eventlog -rtsopts -fprof-auto
    else
        ghc-options: -O2 -optc-O3 -fexcess-precision -threaded -rtsopts -feager-blackholing
